objects/FSL__User_Setting_Territory__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FSL__Service_Territory__c</fullName>
        <label>Service Territory</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipLabel>User Settings</relationshipLabel>
        <relationshipName>User_Setting_Territory_Territories</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FSL__User_Setting__c</fullName>
        <label>User Setting</label>
        <referenceTo>FSL__UserSetting__c</referenceTo>
        <relationshipLabel>Territories</relationshipLabel>
        <relationshipName>User_Setting_Territory_UserSettings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>User Setting Territory</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>User Setting Territory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Setting Territories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>